final version published

--- a/project/website/templates/audiencias.html
+++ b/project/website/templates/audiencias.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block title %}PEOTDU - BCS - Audiencias{% endblock %}
+
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/audiencias.css' %}">
 {% endblock %}
+
 {% block content %}
     <div class="audiencias-container">
         <div class="gradient-line"></div>
         <div class="image-container">
-            <img src="{% static 'images/Audiencias.png' %}" alt="Audiencias" class="audiencias-image">
+            <img src="{% static 'images/AudienciasV2.png' %}" alt="Audiencias" class="audiencias-image">
         </div>
         <div class="gradient-line"></div>
     </div>
