--- a/project/website/templates/cartografia.html
+++ b/project/website/templates/cartografia.html
@@ -8,16 +8,18 @@
 {% block content %}
 <div class="cartografia-container">
     <div class="gradient-line"></div>
+    
     <h1>Cartografia</h1>
+    
     <div class="pdf-grid">
         {% for pdf in pdf_files %}
         <div class="pdf-card">
-            <div class="pdf-preview">
-                <embed src="{{ pdf.url }}#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="300px" />
-            </div>
             <div class="pdf-info">
                 <h3>{{ pdf.title }}</h3>
-                <a href="{{ pdf.url }}" download class="download-button">Descargar PDF</a>
+                <div class="pdf-actions">
+                    <a href="{{ pdf.url }}" target="_blank" class="view-button">Ver PDF</a>
+                    <a href="{{ pdf.url }}" class="download-button" download>Descargar PDF</a>
+                </div>
             </div>
         </div>
         {% endfor %}
